--- a/app/views/site/knowledge.html.erb
+++ b/app/views/site/knowledge.html.erb
@@ -26,7 +26,7 @@ $(function() {
       <div id="tabs-1" class="nopadding">
                                 <ul class="topiclist">
                                 <li>
-                                    <img src="images/photos/thumb7.png" alt="" class="pull-left" />
+                                    <img src="/uploads/user/000/000/002/avatar/small_刘文红.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
                                         <h4><a href="<%= details_path %>">如何处理客户投诉？</a></h4>
                                         <p><a href="">文华</a> 在 24 秒钟前提问</p>
@@ -37,13 +37,13 @@ $(function() {
                                             <span class="label label-info">投诉</span>
                                             <span class="label label-info">处理</span>
                                         <p class="pull-right">
-                                            <i class="iconfa-comments-alt"></i><span> 0 回答</span>
+                                            <i class="iconfa-comments-alt"></i><span> 4 回答</span>
                                             <i class="iconfa-thumbs-up"></i><span> 0 关注</span>
                                         </p>
                                     </div>
                                 </li>
                                 <li>
-                                    <img src="images/photos/thumb6.png" alt="" class="pull-left" />
+                                    <img src="/uploads/user/000/000/006/avatar/small_季绪浩.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
                                         <h4><a href="">我第一次做业务，如何去开发新客户，怎么才能让对方想了解更多自己的银行，产生业务来往。</a></h4>
                                         <p><a href="">罗寿坤</a> 在 49 秒钟前提问</p>
@@ -60,7 +60,7 @@ $(function() {
                                     </div>
                                 </li>
                                 <li>
-                                    <img src="images/photos/thumb5.png" alt="" class="pull-left" />
+                                    <img src="/uploads/user/000/000/009/avatar/small_郝竞.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
                                         <h4><a href="">银行公司客户经理如何发展开拓新客户，增加存款。</a></h4>
                                         <p><a href="">侯运祥</a> 在 1 分钟前提问</p>
@@ -76,7 +76,7 @@ $(function() {
                                     </div>
                                 </li>
                                 <li>
-                                    <img src="images/photos/thumb4.png" alt="" class="pull-left" />
+                                    <img src="/uploads/user/000/000/010/avatar/small_徐向东.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
                                         <h4><a href="">如何控制银行对中小企业的信贷风险</a></h4>
                                         <p><a href="">阎永康</a> 在 3 mins ago</p>
@@ -94,7 +94,7 @@ $(function() {
                                     </div>
                                 </li>
                                 <li>
-                                    <img src="images/photos/thumb3.png" alt="" class="pull-left" />
+                                    <img src="/uploads/user/000/000/011/avatar/small_郭华.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
                                         <h4><a href="">银行国际业务部的的国际结算岗是做什么的？</a></h4>
                                         <p><a href="">王春晖</a> 在 4 mins ago</p>
@@ -111,7 +111,7 @@ $(function() {
                                     </div>
                                 </li>
                                 <li>
-                                    <img src="images/photos/thumb2.png" alt="" class="pull-left" />
+                                    <img src="/uploads/user/000/000/020/avatar/small_梁鸿卉.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
                                         <h4><a href="">银行对中小企业国际贸易融资业务主要有哪些？</a></h4>
                                         <p><a href="">王世祥</a> 在 10 mins ago</p>
@@ -129,7 +129,7 @@ $(function() {
                                     </div>
                                 </li>
                                 <li>
-                                    <img src="images/photos/thumb1.png" alt="" class="pull-left" />
+                                    <img src="/uploads/user/000/000/021/avatar/small_张新宇.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
                                         <h4><a href="">金融危机下，我国银行开展国际业务需注意哪些问题？</a></h4>
                                         <p><a href="">石跃龙</a> 在 14 mins ago</p>
@@ -147,7 +147,7 @@ $(function() {
                                     </div>
                                 </li>
                                 <li>
-                                    <img src="images/photos/thumb10.png" alt="" class="pull-left" />
+                                    <img src="/uploads/user/000/000/030/avatar/small_张刚.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
                                         <h4><a href="">请问作为一个支行行长，最重要的工作是哪些？</a></h4>
                                         <p><a href="">何仲民</a> 在 25 mins ago</p>
@@ -220,7 +220,7 @@ $(function() {
                                 <ul class="userlist userlist-favorites">
                                     <li>
                                         <div>
-                                            <img src="images/photos/thumb3.png" alt="" class="pull-left" />
+                                            <img src="/uploads/user/000/000/030/avatar/small_张刚.jpg" alt="" class="pull-left" />
                                             <div class="uinfo">
                                                 <h5>王春晖</h5>
                                                 <p class="link">
@@ -231,7 +231,7 @@ $(function() {
                                     </li>
                                     <li>
                                         <div>
-                                            <img src="images/photos/thumb4.png" alt="" class="pull-left" />
+                                            <img src="/uploads/user/000/000/021/avatar/small_张新宇.jpg" alt="" class="pull-left" />
                                             <div class="uinfo">
                                                 <h5>阎永康</h5>
                                                 <p class="link">
@@ -242,7 +242,7 @@ $(function() {
                                     </li>
                                     <li>
                                         <div>
-                                            <img src="images/photos/thumb5.png" alt="" class="pull-left" />
+                                            <img src="/uploads/user/000/000/009/avatar/small_郝竞.jpg" alt="" class="pull-left" />
                                             <div class="uinfo">
                                                 <h5>陈建国</h5>
                                                 <p class="link">
@@ -253,7 +253,7 @@ $(function() {
                                     </li>
                                     <li>
                                         <div>
-                                            <img src="images/photos/thumb1.png" alt="" class="pull-left" />
+                                            <img src="/uploads/user/000/000/033/avatar/small_徐长满.jpg" alt="" class="pull-left" />
                                             <div class="uinfo">
                                                 <h5>石跃龙</h5>
                                                 <p class="link">
@@ -264,7 +264,7 @@ $(function() {
                                     </li>
                                     <li>
                                         <div>
-                                            <img src="images/photos/thumb2.png" alt="" class="pull-left" />
+                                            <img src="/uploads/user/000/000/032/avatar/small_田玉峰.jpg" alt="" class="pull-left" />
                                             <div class="uinfo">
                                                 <h5>王世祥</h5>
                                                 <p class="link">
