--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -18,11 +18,19 @@
 
   .user-info {
     margin-left: 100px;
+    a {
+      font-size: 17px;
+    }
 
     ul.info-details {
       list-style-type: none;
       padding: 0;
       margin: 0;
+    }
+
+    span.user-level {
+      color: #f97956;
+      padding-left: 10px;
     }    
   } 
 }
