--- a/app/views/site/details.html.erb
+++ b/app/views/site/details.html.erb
@@ -68,14 +68,14 @@
         </li>
       </ul>
     </div>
-    <%# unless current_user.admin? %>
+    <%= unless current_user.admin? %>
     <div class="well quest-input">
       
       <%= text_area_tag "topic", nil, :rows => 4, :cols => 25, :placeholder => "提问者正期待您的回答..." %>
       <div><a href="#" class="btn btn-primary disabled"><i class="iconfa-edit icon-white"></i> 提交回答</a></div>
       
     </div>
-    <%# end %>
+    <% end %>
   </div>
   <div id="dashboard-right" class="span4">
     <h3 class="subtitle">相关问题</h3>
