--- a/app/views/site/knowledge.html.erb
+++ b/app/views/site/knowledge.html.erb
@@ -29,7 +29,7 @@ $(function() {
                                     <img src="/uploads/user/000/000/002/avatar/small_刘文红.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
                                         <h4><a href="<%= details_path %>">如何处理客户投诉？</a></h4>
-                                        <p><a href="">文华</a> 在 24 秒钟前提问</p>
+                                        <p><a href="#myModal" data-toggle="modal">文华</a> 在 24 秒钟前提问</p>
                                         <p class="topic-content">我是一名个金客户经理，经常会遇到客户直接投诉我行业务，实际上并不是因为我的原因产生的，让我很苦恼。请问如何解决？</p>
                                         
                                             <i class="iconfa-tags"></i>
@@ -45,8 +45,8 @@ $(function() {
                                 <li>
                                     <img src="/uploads/user/000/000/006/avatar/small_季绪浩.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
-                                        <h4><a href="">我第一次做业务，如何去开发新客户，怎么才能让对方想了解更多自己的银行，产生业务来往。</a></h4>
-                                        <p><a href="">罗寿坤</a> 在 49 秒钟前提问</p>
+                                        <h4><a href="#myModal" data-toggle="modal">我第一次做业务，如何去开发新客户，怎么才能让对方想了解更多自己的银行，产生业务来往。</a></h4>
+                                        <p><a href="#myModal" data-toggle="modal">罗寿坤</a> 在 49 秒钟前提问</p>
                                         <p class="topic-content">与客户沟通技巧、打电话给客户一开始应该说些什么回让客户觉得我是关心他的！</p>
                                         
                                             <i class="iconfa-tags"></i>
@@ -62,8 +62,8 @@ $(function() {
                                 <li>
                                     <img src="/uploads/user/000/000/009/avatar/small_郝竞.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
-                                        <h4><a href="">银行公司客户经理如何发展开拓新客户，增加存款。</a></h4>
-                                        <p><a href="">侯运祥</a> 在 1 分钟前提问</p>
+                                        <h4><a href="#myModal" data-toggle="modal">银行公司客户经理如何发展开拓新客户，增加存款。</a></h4>
+                                        <p><a href="#myModal" data-toggle="modal">侯运祥</a> 在 1 分钟前提问</p>
                                         <p class="topic-content">我是新人，还请前辈们指点。</p>                                        
                                             <i class="iconfa-tags"></i>
                                             <span class="label label-info">公司客户经理</span>
@@ -78,8 +78,8 @@ $(function() {
                                 <li>
                                     <img src="/uploads/user/000/000/010/avatar/small_徐向东.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
-                                        <h4><a href="">如何控制银行对中小企业的信贷风险</a></h4>
-                                        <p><a href="">阎永康</a> 在 3 mins ago</p>
+                                        <h4><a href="#myModal" data-toggle="modal">如何控制银行对中小企业的信贷风险</a></h4>
+                                        <p><a href="#myModal" data-toggle="modal">阎永康</a> 在 3 mins ago</p>
                                         <p class="topic-content">请高人们指点如何按照一定步骤来识别这些风险。</p>
                                         
                                             <i class="iconfa-tags"></i>
@@ -96,8 +96,8 @@ $(function() {
                                 <li>
                                     <img src="/uploads/user/000/000/011/avatar/small_郭华.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
-                                        <h4><a href="">银行国际业务部的的国际结算岗是做什么的？</a></h4>
-                                        <p><a href="">王春晖</a> 在 4 mins ago</p>
+                                        <h4><a href="#myModal" data-toggle="modal">银行国际业务部的的国际结算岗是做什么的？</a></h4>
+                                        <p><a href="#myModal" data-toggle="modal">王春晖</a> 在 4 mins ago</p>
                                         <p class="topic-content">目前我有可能调去该岗位，还请了解岗位情况的同事给与指导，谢谢。</p>
                                         
                                             <i class="iconfa-tags"></i>
@@ -113,8 +113,8 @@ $(function() {
                                 <li>
                                     <img src="/uploads/user/000/000/020/avatar/small_梁鸿卉.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
-                                        <h4><a href="">银行对中小企业国际贸易融资业务主要有哪些？</a></h4>
-                                        <p><a href="">王世祥</a> 在 10 mins ago</p>
+                                        <h4><a href="#myModal" data-toggle="modal">银行对中小企业国际贸易融资业务主要有哪些？</a></h4>
+                                        <p><a href="#myModal" data-toggle="modal">王世祥</a> 在 10 mins ago</p>
                                         <p class="topic-content">目前，银行在对中小企业进行国际贸易融资时主要是采用哪些业务？我查了很多资料，但都没有详细介绍。谢谢了！是针对中小企业的  银行在为这部分客户融资时 通常采用什么业务?打包带贷款对中小企业做得多吗? </p>
                                         
                                             <i class="iconfa-tags"></i>
@@ -131,8 +131,8 @@ $(function() {
                                 <li>
                                     <img src="/uploads/user/000/000/021/avatar/small_张新宇.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
-                                        <h4><a href="">金融危机下，我国银行开展国际业务需注意哪些问题？</a></h4>
-                                        <p><a href="">石跃龙</a> 在 14 mins ago</p>
+                                        <h4><a href="#myModal" data-toggle="modal">金融危机下，我国银行开展国际业务需注意哪些问题？</a></h4>
+                                        <p><a href="#myModal" data-toggle="modal">石跃龙</a> 在 14 mins ago</p>
                                         <p class="topic-content">金融危机下，我国银行开展国际业务需注意哪些问题？</p>
                                         
                                             <i class="iconfa-tags"></i>
@@ -149,8 +149,8 @@ $(function() {
                                 <li>
                                     <img src="/uploads/user/000/000/030/avatar/small_张刚.jpg" alt="" class="pull-left" />
                                     <div class="topic-info">
-                                        <h4><a href="">请问作为一个支行行长，最重要的工作是哪些？</a></h4>
-                                        <p><a href="">何仲民</a> 在 25 mins ago</p>
+                                        <h4><a href="#myModal" data-toggle="modal">请问作为一个支行行长，最重要的工作是哪些？</a></h4>
+                                        <p><a href="#myModal" data-toggle="modal">何仲民</a> 在 25 mins ago</p>
                                         <p class="topic-content">我即将升任天河支行行长，对于新岗位比较陌生，也不知道是否能做得好？还希望得到大家的意见。</p>
                                         
                                             <i class="iconfa-tags"></i>
@@ -224,7 +224,7 @@ $(function() {
                                             <div class="uinfo">
                                                 <h5>王春晖</h5>
                                                 <p class="link">
-                                                    <a href=""><i class="iconfa-plus"></i> 关注 </a>
+                                                    <a href="#myModal" data-toggle="modal"><i class="iconfa-plus"></i> 关注 </a>
                                                 </p>
                                             </div>
                                         </div>
@@ -235,7 +235,7 @@ $(function() {
                                             <div class="uinfo">
                                                 <h5>阎永康</h5>
                                                 <p class="link">
-                                                    <a href=""><i class="iconfa-plus"></i> 关注  </a>
+                                                    <a href="#myModal" data-toggle="modal"><i class="iconfa-plus"></i> 关注  </a>
                                                 </p>
                                             </div>
                                         </div>
@@ -246,7 +246,7 @@ $(function() {
                                             <div class="uinfo">
                                                 <h5>陈建国</h5>
                                                 <p class="link">
-                                                    <a href=""><i class="iconfa-plus"></i> 关注  </a>
+                                                    <a href="#myModal" data-toggle="modal"><i class="iconfa-plus"></i> 关注  </a>
                                                 </p>
                                             </div>
                                         </div>
@@ -257,7 +257,7 @@ $(function() {
                                             <div class="uinfo">
                                                 <h5>石跃龙</h5>
                                                 <p class="link">
-                                                    <a href=""><i class="iconfa-plus"></i> 关注  </a>
+                                                    <a href="#myModal" data-toggle="modal"><i class="iconfa-plus"></i> 关注  </a>
                                                 </p>
                                             </div>
                                         </div>
@@ -268,7 +268,7 @@ $(function() {
                                             <div class="uinfo">
                                                 <h5>王世祥</h5>
                                                 <p class="link">
-                                                    <a href=""><i class="iconfa-plus"></i> 关注  </a>
+                                                    <a href="#myModal" data-toggle="modal"><i class="iconfa-plus"></i> 关注  </a>
                                                 </p>
                                             </div>
                                         </div>
