--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -98,8 +98,8 @@
     
     <div class="alert alert-block">
       <button data-dismiss="alert" class="close" type="button">&times;</button>
-      <h4><%= t("menu.user.notice_title") %></h4>
-      <p style="margin: 8px 0">2012年的业绩评估终止日期为2013年4月15日，请确定你已经完成了自己的评估.</p>
+      <h4>系统提示：</h4>
+      <p style="margin: 8px 0">系统的部分功能还未完全部署，目前仅供内部封闭测试使用。</p>
     </div><!--alert-->
     <div class="divider15"></div>
                         
