--- a/app/views/site/details.html.erb
+++ b/app/views/site/details.html.erb
@@ -72,7 +72,7 @@
     <div class="well quest-input">
       
       <%= text_area_tag "topic", nil, :rows => 4, :cols => 25, :placeholder => "提问者正期待您的回答..." %>
-      <div><a href="#" class="btn btn-primary disabled"><i class="iconfa-edit icon-white"></i> 提交回答</a></div>
+      <div><a href="#myModal" data-toggle="modal" class="btn btn-primary disabled"><i class="iconfa-edit icon-white"></i> 提交回答</a></div>
       
     </div>
     <% end %>
