Add notice for unfinished header menu.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,7 +12,7 @@
         </a>
       </li>
       <li class="<%= 'open' if @menu_category == 'header' and @menu_active == 'teacher' %>">
-        <a href="#">
+        <a href="#myModal" data-toggle="modal">
           <span class="head-icon iconfa-group"></span>
           <span class="headmenu-label">讲师中心</span>
         </a>
