--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -99,7 +99,7 @@
     <div class="alert alert-block">
       <button data-dismiss="alert" class="close" type="button">&times;</button>
       <h4>系统提示：</h4>
-      <p style="margin: 8px 0">系统的部分功能还未完全部署，目前仅供内部封闭测试使用。</p>
+      <p style="margin: 8px 0">体验版部分功能不可用，请升级成正式版</p>
     </div><!--alert-->
     <div class="divider15"></div>
                         
