--- a/app/views/admin/admin/dashboard.html.erb
+++ b/app/views/admin/admin/dashboard.html.erb
@@ -156,6 +156,13 @@ $(function() {
   </div> <!--span8-->
 
   <div id="dashboard-right" class="span4">
+    <div class="alert alert-block">
+      <button data-dismiss="alert" class="close" type="button">&times;</button>
+      <h4>系统提示：</h4>
+      <p style="margin: 8px 0">体验版部分功能不可用，请升级成正式版</p>
+    </div><!--alert-->
+    <div class="divider15"></div>
+    
     <h3 class="subtitle"><%= t('dashboard.calender.title') %></h3>
     <div class="divider15"></div>
 
