--- a/app/views/admin/admin/competency.html.erb
+++ b/app/views/admin/admin/competency.html.erb
@@ -111,8 +111,8 @@ $(function() {
     <div class="divider15"></div>
 
     <div class="well">
-      <a href="#" class="btn btn-primary disabled"><i class="iconfa-plus icon-white"></i><%= t('competency.all.new') %></a>
-      <a href="<%= export_competencies_path(format: "csv") %>" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> <%= t('competency.all.export') %></a>
+      <a href="#myModal" data-toggle="modal" class="btn btn-primary disabled"><i class="iconfa-plus icon-white"></i><%= t('competency.all.new') %></a>
+      <a href="#myModal" data-toggle="modal" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> <%= t('competency.all.export') %></a>
     </div>
 
 
@@ -131,7 +131,8 @@ $(function() {
           <a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t('competency.all.remove') %></a>
         </div>
       </div>
-      <%= submit_tag t("competency.all.import").html_safe, :class => "btn btn-primary submit-import" %>
+      <%# submit_tag t("competency.all.import").html_safe, :class => "btn btn-primary submit-import" %>
+      <a href="#myModal" data-toggle="modal" class="btn btn-primary"> 导入胜任力</a>
       <% end %>
     </div>
 
