--- a/app/views/admin/admin/course.html.erb
+++ b/app/views/admin/admin/course.html.erb
@@ -61,7 +61,7 @@
 
     <div class="well">
       <a href="<%= new_user_course_path(current_user) %>" class="btn btn-primary"><i class="iconfa-plus icon-white"></i> <%= t("course.all.new") %></a>
-      <a href="<%= export_courses_path(format: "csv") %>" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> <%= t("course.all.export") %></a>
+      <a href="#myModal" data-toggle="modal" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> <%= t("course.all.export") %></a>
     </div>
 
     <h4 class="widgettitle"> <%= t("course.all.import_title") %></h4>
@@ -79,7 +79,8 @@
           <a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t("course.all.remove") %></a>
         </div>
       </div>
-      <%= submit_tag t("course.all.import").html_safe, :class => "btn btn-primary submit-import" %>
+      <%# submit_tag t("course.all.import").html_safe, :class => "btn btn-primary submit-import" %>
+      <a href="#myModal" data-toggle="modal" class="btn btn-primary"> 导入课程</a>
       <% end %>
     </div>
 
