--- a/app/views/shared/_pageheader.html.erb
+++ b/app/views/shared/_pageheader.html.erb
@@ -8,7 +8,7 @@
 </ul>
 
 <div class="pageheader">
-  <form action="#" method="post" class="searchbar">
+  <form class="searchbar">
     <input type="text" name="keyword" placeholder= <%=t("course.all.notic3")  %> />
   </form>
   <div class="pageicon"><span class="<%= yield(:page_icon) %>"></span></div>
