--- a/app/views/admin/admin/position.html.erb
+++ b/app/views/admin/admin/position.html.erb
@@ -93,8 +93,7 @@
           <a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t("position.all.remove") %></a>
         </div>
       </div>
-      <%# submit_tag t("position.all.import").html_safe, :class => "btn btn-primary submit-import" %>
-      <a href="#myModal" data-toggle="modal" class="btn btn-primary"> 导入职位</a>
+      <%= submit_tag t("position.all.import").html_safe, :class => "btn btn-primary submit-import" %>
       <% end %>
     </div>
   </div>
