--- a/app/views/admin/admin/course.html.erb
+++ b/app/views/admin/admin/course.html.erb
@@ -79,8 +79,7 @@
           <a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t("course.all.remove") %></a>
         </div>
       </div>
-      <%# submit_tag t("course.all.import").html_safe, :class => "btn btn-primary submit-import" %>
-      <a href="#myModal" data-toggle="modal" class="btn btn-primary"> 导入课程</a>
+      <%= submit_tag t("course.all.import").html_safe, :class => "btn btn-primary submit-import" %>
       <% end %>
     </div>
 
