--- a/app/views/admin/admin/user.html.erb
+++ b/app/views/admin/admin/user.html.erb
@@ -79,8 +79,7 @@
           <a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t('users.all.remove') %></a>
         </div>
       </div>
-      <%# submit_tag t('users.all.import').html_safe, :class => "btn btn-primary" %>
-      <a href="#myModal" data-toggle="modal" class="btn btn-primary"> 导入用户</a>
+      <%= submit_tag t('users.all.import').html_safe, :class => "btn btn-primary" %>
       <% end %>
     </div>
     
